Closed Bug 413325 Opened 18 years ago Closed 18 years ago

nsNativeRootAccessibleWrap doesn't release ref of AtkObject of dialogs

Categories

(Core :: Disability Access APIs, defect, P3)

x86
Linux
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

(Keywords: memory-leak)

Attachments

(1 file)

When open a gnome native dialog in Firefox, e.g. "Open File.." dialog, we creates a nsNativeRootAccessibleWrap object, which holds a ref of the AtkObject. But it doesn't release the ref in deconstruction.
OS: Mac OS X → Linux
Attached patch patchSplinter Review
unref in destruction also add an assertion to ~nsAccessibleWrap()
Attachment #298243 - Flags: review?(aaronleventhal)
Attachment #298243 - Flags: review?(aaronleventhal)
Attachment #298243 - Flags: review+
Attachment #298243 - Flags: approval1.9?
Flags: blocking1.9+
Priority: -- → P3
Comment on attachment 298243 [details] [diff] [review] patch Now on blocking list - patches don't need approval to land
Attachment #298243 - Flags: approval1.9?
Attachment #298243 - Flags: approval1.9?
Comment on attachment 298243 [details] [diff] [review] patch sorry, missed last comment
Attachment #298243 - Flags: approval1.9?
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: