Bug 413325 nsNativeRootAccessibleWrap doesn't release ref of AtkObject of dialogs r=aaronleventhal